Added revolter to contributors list

--- a/resources/resources_autogenerated.qrc
+++ b/resources/resources_autogenerated.qrc
@@ -3,6 +3,7 @@
     <file>avatars/fourtf.png</file>
     <file>avatars/mm2pl.png</file>
     <file>avatars/pajlada.png</file>
+    <file>avatars/revolter.jpg</file>
     <file>avatars/zneix.png</file>
     <file>buttons/addSplit.png</file>
     <file>buttons/addSplitDark.png</file>
