--- a/resources/resources_autogenerated.qrc
+++ b/resources/resources_autogenerated.qrc
@@ -1,6 +1,7 @@
 <RCC>
   <qresource prefix="/">
     <file>avatars/fourtf.png</file>
+    <file>avatars/matthewde.jpg</file>
     <file>avatars/mm2pl.png</file>
     <file>avatars/pajlada.png</file>
     <file>avatars/revolter.jpg</file>
