added kararty to contributors

--- a/resources/resources_autogenerated.qrc
+++ b/resources/resources_autogenerated.qrc
@@ -6,6 +6,7 @@
     <file>avatars/pajlada.png</file>
     <file>avatars/revolter.jpg</file>
     <file>avatars/zneix.png</file>
+    <file>avatars/kararty.png</file>
     <file>buttons/addSplit.png</file>
     <file>buttons/addSplitDark.png</file>
     <file>buttons/ban.png</file>
