--- a/src/widgets/dialogs/EditHotkeyDialog.ui
+++ b/src/widgets/dialogs/EditHotkeyDialog.ui
@@ -119,7 +119,7 @@ see this message :)</string>
      <item row="2" column="1">
       <widget class="QComboBox" name="actionPicker">
        <property name="editable">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
       </widget>
      </item>
