--- a/src/widgets/dialogs/EditHotkeyDialog.ui
+++ b/src/widgets/dialogs/EditHotkeyDialog.ui
@@ -37,7 +37,7 @@ see this message :)</string>
      <item row="0" column="0">
       <widget class="QLabel" name="nameLabel">
        <property name="text">
-        <string>Hotkey name:</string>
+        <string>Name:</string>
        </property>
        <property name="buddy">
         <cstring>nameEdit</cstring>
@@ -63,15 +63,12 @@ see this message :)</string>
      <item row="1" column="0">
       <widget class="QLabel" name="scopeLabel">
        <property name="text">
-        <string>Hotkey scope:</string>
+        <string>Category:</string>
        </property>
        <property name="buddy">
         <cstring>scopePicker</cstring>
        </property>
       </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QComboBox" name="scopePicker"/>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="actionLabel">
@@ -93,7 +90,7 @@ see this message :)</string>
      <item row="3" column="0">
       <widget class="QLabel" name="keyComboLabel">
        <property name="text">
-        <string>Key combo:</string>
+        <string>Keybinding:</string>
        </property>
        <property name="buddy">
         <cstring>keyComboEdit</cstring>
@@ -122,6 +119,9 @@ see this message :)</string>
         <string>Newline separated arguments for the action</string>
        </property>
       </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QComboBox" name="scopePicker"/>
      </item>
     </layout>
    </item>
