--- a/resources/resources_autogenerated.qrc
+++ b/resources/resources_autogenerated.qrc
@@ -7,6 +7,7 @@
     <file>avatars/pajlada.png</file>
     <file>avatars/revolter.jpg</file>
     <file>avatars/slch.png</file>
+    <file>avatars/xheaveny.png</file>
     <file>avatars/zneix.png</file>
     <file>buttons/addSplit.png</file>
     <file>buttons/addSplitDark.png</file>
