Add ALazyMeme to the contributor list (#3097)
Co-authored-by: pajlada <rasmus.karlsson@pajlada.com>

--- a/resources/resources_autogenerated.qrc
+++ b/resources/resources_autogenerated.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="/">
+    <file>avatars/alazymeme.png</file>
     <file>avatars/fourtf.png</file>
     <file>avatars/kararty.png</file>
     <file>avatars/matthewde.jpg</file>
