--- a/src/widgets/dialogs/EditHotkeyDialog.ui
+++ b/src/widgets/dialogs/EditHotkeyDialog.ui
@@ -111,6 +111,16 @@ see this message :)</string>
       </widget>
      </item>
      <item row="4" column="1">
+      <widget class="QLabel" name="argumentsDescription">
+       <property name="text">
+        <string></string>
+       </property>
+       <property name="buddy">
+        <cstring>argumentsDescription</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
       <widget class="QPlainTextEdit" name="argumentsEdit">
        <property name="plainText">
         <string/>
