--- a/src/widgets/dialogs/EditHotkeyDialog.ui
+++ b/src/widgets/dialogs/EditHotkeyDialog.ui
@@ -19,6 +19,12 @@
      <property name="enabled">
       <bool>true</bool>
      </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="font">
       <font>
        <weight>75</weight>
@@ -113,7 +119,7 @@ see this message :)</string>
      <item row="4" column="1">
       <widget class="QLabel" name="argumentsDescription">
        <property name="text">
-        <string></string>
+        <string>You should never see this message :)</string>
        </property>
        <property name="buddy">
         <cstring>argumentsDescription</cstring>
