--- a/resources/resources_autogenerated.qrc
+++ b/resources/resources_autogenerated.qrc
@@ -15,6 +15,8 @@
     <file>buttons/addSplitDark.png</file>
     <file>buttons/ban.png</file>
     <file>buttons/banRed.png</file>
+    <file>buttons/clearSearchDisabled.png</file>
+    <file>buttons/clearSearchEnabled.png</file>
     <file>buttons/copyDark.png</file>
     <file>buttons/copyDark.svg</file>
     <file>buttons/copyLight.png</file>
