--- a/resources/resources_autogenerated.qrc
+++ b/resources/resources_autogenerated.qrc
@@ -2,8 +2,10 @@
   <qresource prefix="/">
     <file>avatars/_1xelerate.png</file>
     <file>avatars/alazymeme.png</file>
+    <file>avatars/brian6932.png</file>
     <file>avatars/fourtf.png</file>
     <file>avatars/kararty.png</file>
+    <file>avatars/karlpolice.png</file>
     <file>avatars/matthewde.jpg</file>
     <file>avatars/mm2pl.png</file>
     <file>avatars/pajlada.png</file>
